# crewai

./: pyproject.toml  report.md
demo_ai_agent/: README.md  report.md
src/demo_ai_agent/: crew.py  main.py
