[project]
name = "demo_ai_agent"
version = "0.1.0"
description = "demo_ai_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
demo_ai_agent = "demo_ai_agent.main:run"
run_crew = "demo_ai_agent.main:run"
train = "demo_ai_agent.main:train"
replay = "demo_ai_agent.main:replay"
test = "demo_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
